# ThanatosAgent

./: .env-example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
db/: ddl.sql
src/agent/: nodes.py  state.py  workflow.py
src/agent/prompt/: prompt.py
src/agent/tools/: alert_tools.py  db_tools.py  price_tools.py  search_tools.py  tools.py
src/core/: database.py  logger.py  settings.py
src/domain/: product.py
src/interface/: catalog_interface.py  scrapping_interface.py
src/repository/: alert_repository.py  catalog_repository.py
src/services/: catalog_service.py  embedding_service.py  scrapper_service.py  watchdog_service.py
src/telegram/: message.py  renderer.py  start_up.py  webhook.py
src/utils/: scrapping_utils.py
